# ffs

./: .depends  CMakeLists.txt  CTestCustom.ctest.in  Makefile.am  Makefile.in  aclocal.m4  cmenet.c  config.h.cmake  configure  configure.ac  empty.c  ffs-config.cmake.in  ffs.spec  ffs.supp  ffsConfig.cmake.in  version.c
.github/workflows/: build-and-test.yml
cmake/: BisonFlexSub.cmake  FindATL.cmake  FindDILL.cmake  FindDill.cmake  Findcercs_env.cmake
cod/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  cg.c  cod.h  cod.l  cod.structs  cod.y  cod_internal.h  config.h.in  configure  configure.ac  gcctestsuite.pl  gen_tests.pl  standard.c  struct.pl
cod/pregen_source/Windows/: cod.tab.c
cod/tests/: CMakeLists.txt  Makefile.am  Makefile.in  atl_test.c  compound_assignment.c  control.c  data_funcs.c  general.ops  general.pl  gray.c  strings.c  structs.c  t1.c  t10.c  t12.c  t2.c  t3.c  t4.c  t4.out  t5.c  t6.c  t7.c  t8.c  t9.c  time.c
config/: cercs.m4  install-sh
dfg_tests/: CMakeLists.txt
doc/: manual.tex  manual_body.tex
ffs/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  evol.c  ffs.c  ffs.h  ffs.h.in  ffs_conv.c  ffs_file.c  ffs_formats.c  ffs_gen.c  ffs_gen.h  ffs_internal.h  ffs_marshal.c  ffs_marshal.h  io_get.c  io_interface.h  nt_io.c  sax.c  unix_io.c  version.c
ffs/doc/: manual.tex
ffs/progs/: CMakeLists.txt  FFScp.c  FFSdump.c  FFSsort.c  Makefile.am  Makefile.in  sort_test_generate.c
ffs/tests/: CMakeLists.txt  Makefile.am  Makefile.in  adios2_bug.c  append.c  context_test.c  context_test2.c  ffs_file_test.c  ffs_index_test.c  ffs_write.c  fortran_test.c  get_set_test.c  io_align_test.c  io_dyn_read.c  io_test.c  io_write.c  marshal_test.c  marshal_test2.c  no_leaf_test.c  test_file_unique.c  test_funcs.c  test_funcs.h
fm/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  fm.h  fm_dump.c  fm_formats.c  fm_get.c  fm_internal.h  lookup3.c  nt_io.c  server.c  server_acts.c  unix_io.c  xml.c
fm/progs/: CMakeLists.txt  Makefile.am  Makefile.in  edu.gatech.cercs.formatproxy.plist  format_cmd.c  format_dump.c  format_info.c  format_server.c  server.c
fm/tests/: CMakeLists.txt  Makefile.am  Makefile.in  align_test.c  format_test.c  get_set_test.c  scale_test.c  self_format_test.c  test_funcs.c  test_funcs.h
rtests/: CMakeLists.txt
scripts/ci/setup/: install-atl.sh  install-dill.sh  linux.sh  windows.sh
